# rust-blog

client/: package-lock.json  package.json
client/public/: index.html  manifest.json
client/src/: app.tsx
client/src/auth/: login.tsx  private-route.tsx  public-route.tsx  register.tsx
client/src/components/: blog-list.tsx  comments.tsx  edit-blog-button.tsx  likes.tsx  listed-blog.tsx  loading.tsx  paragraph.tsx  submit-button.tsx  toolbar.tsx
client/src/context/: current-user.tsx
client/src/hooks/: use-async.ts  use-mutation.ts
client/src/pages/: add-blog-form.tsx  blog-library.tsx  blog.tsx  draft-blog-form.tsx  search-results.tsx
client/src/services/: auth-service.ts  blog-service.ts  http-service.ts
server/: Cargo.toml
server/migrations/: 20220213183706_add_users.sql  20220213183750_add_blogs.sql  20220213183807_add_likes.sql  20220213183821_add_comments.sql  20220216224719_make_likes_unique.sql
server/src/: error.rs  lib.rs  main.rs  routing.rs
server/src/handlers/: blogs.rs  comments.rs  likes.rs  mod.rs  users.rs
server/src/models/: blog.rs  comment.rs  like.rs  mod.rs  user.rs
server/tests/: test_models.rs
