[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures       = "0.3.12"
futures-util  = "0.3"
actix-rt      = "1.1.1"
actix-web     = "3.3.2"
actix-cors    = "0.5.4"
chrono        = { version = "0.4.19", features = ["serde"] }
env_logger    = "0.9.0"
log           = "0.4.14"
http          = "0.2.6"
serde         = { version = "1.0", features = ["derive"] }
dotenv        = "0.15"
url           = "2.2.2"
bcrypt        = "0.10"
random-string = "1.0.0"

# Older version of sqlx to work around this:
# https://github.com/launchbadge/sqlx/issues/1117#issuecomment-801237734
sqlx = { version = "0.4.2", default-features = false, features = ["runtime-actix-rustls", "macros", "postgres", "chrono", "migrate"] }